tests/paczka1/fuzzy1/26082702.err
Error in line 2: A626 A976 20,5
Error in line 32: ijwAJI S1!5 30,7
Error in line 26: jkuOoWOIYLU S145 3,7
Error in line 35: A626 A591 178,0
